@@ -58,6 +58,7 @@ Fixed bugs
 - the feasibility checker for integrality constraints now uses checkintegrality even for implied integers
 - fixed an issue caused by aggregated variables not added to a hashmap in the xor constraint handler
 - changed function solveRowEchelonGF2 in cons_xor.c to avoid errors if rank is 0
+- fixed that the implication presolver tried to aggregate or tighten bounds of multiaggregated variables
 
 Miscellaneous
 -------------
